add donations admin page and api fix admin update user profile